# exgaltoolkit

./: README.md  meson.build  pyproject.toml
examples/: fft-update-test.py  minimal_example.py  minimal_example_serial.py  pofk.py
exgaltoolkit/: __init__.py  meson.build
exgaltoolkit/api/: __init__.py  factory.py  meson.build  simulation.py
exgaltoolkit/core/: __init__.py  config.py  data_models.py  exceptions.py  fft_ops.py  k_grids.py  lpt_math.py  meson.build  noise.py  transfers.py
exgaltoolkit/cosmology/: __init__.py  growth.py  modern_service.py  parameters.py
exgaltoolkit/data/: meson.build
exgaltoolkit/field/: __init__.py  command_line_interface.py  fieldsky.py  libfield.py  meson.build
exgaltoolkit/grid/: __init__.py  lpt.py  modern_operations.py  operations.py  operations_new.py
exgaltoolkit/initial_conditions/: __init__.py  generator.py  writer.py
exgaltoolkit/legacy/: __init__.py  cosmo.py  cube.py  ics.py  meson.build  sky.py
exgaltoolkit/lpt/: __init__.py  cube.py  meson.build
exgaltoolkit/mathutil/: meson.build  random.py
exgaltoolkit/mockgen/: __init__.py  command_line_interface.py  cosmo.py  ics.py  meson.build  sky.py
exgaltoolkit/services/: __init__.py  cosmology_service.py  grid_service.py  lpt_service.py  output_service.py
exgaltoolkit/util/: __init__.py  backend.py  ext_interface.py  jax_util.py  log_util.py  meson.build
exgaltoolkit/workflow/: __init__.py  meson.build  simulation_steps.py  workflow_engine.py
tests/: gen_noise.ipynb  run_comparison_fixed.py  run_comparison_tests.py  test_core_functionality.py  test_minimal_example.py  test_refactored_architecture.py  traverse_namespace.py
