[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'exgaltoolkit'
version = '0.0.1.a3'
description = 'A library of tools for extragalactic sky simulations.'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    "numpy",
    "healpy",
    "jax",
    "jaxlib",
    "mpi4py"
]
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Shamik Ghosh', email = 'shamik@lbl.gov'},
  {name = 'Marcelo Alvarez', email = 'malvarez@slac.gov'},
  {name = 'Jacques Delabrouille', email = 'jdelabrouille@lbl.gov'}
]
